Fixed bottom restaurant card being cut off

--- a/Code/src/pages/tab.css
+++ b/Code/src/pages/tab.css
@@ -45,6 +45,10 @@
 
 }
 
+.scroll-content{
+    margin-bottom: 150px;
+}
+
 ion-item {
     --border-radius: 10px;
 
